--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
     <script id="dsq-count-scr" src="//hbd-jjh.disqus.com/count.js" async></script>
 </head>
 <body>
+    <div id="confetti-container"></div>
+    <div id="custom-cursor"></div>
+    <audio id="background-music" loop autoplay>
+        <source src="audio/song.mp3" type="audio/mpeg">
+    </audio>
     <div class="container">
         <header>
             <h1 class="highlight-text">Happy Birthday, Jihoon!</h1>
