--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div id="confetti-container"></div>
     <div id="custom-cursor"></div>
     <audio id="background-music" loop autoplay>
-        <source src="https://raw.githubusercontent.com/AngelaBaek/hbd-2025/main/audio/song.mp3" type="audio/mpeg">
+        <source src="https://github.com/AngelaBaek/hbd-2025/blob/main/audio/song.mp3" type="audio/mpeg">
     </audio>
     <div class="container">
         <header>
