--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div id="confetti-container"></div>
     <div id="custom-cursor"></div>
     <audio id="background-music" loop autoplay>
-        <source src="https://github.com/AngelaBaek/hbd-2025/blob/main/audio/song.mp3" type="audio/mpeg">
+        <source src="/audio/song.mp3" type="audio/mpeg">
     </audio>
     <div class="container">
         <header>
@@ -28,7 +28,7 @@
 
         <main class="image-gallery">
             <button class="nav-button prev-button">&lt;</button>
-            <img id="main-image" src="https://github.com/AngelaBaek/hbd-2025/blob/main/images/image1.jpg" alt="Jihoon's Birthday Image">
+            <img id="main-image" src="/images/image1.jpg" alt="Jihoon's Birthday Image">
             <button class="nav-button next-button">&gt;</button>
         </main>
 
