--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
         <main class="image-gallery">
             <button class="nav-button prev-button">&lt;</button>
-            <img id="main-image" src="images/image1.JPG" alt="Jihoon's Birthday Image">
+            <img id="main-image" src="images/image1.jpg" alt="Jihoon's Birthday Image">
             <button class="nav-button next-button">&gt;</button>
         </main>
 
